--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
+    "web3": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
